@@ -2,6 +2,11 @@ Version 2.0.0rc7 - The "xxxxxxxxxxxxxxxx" version.
 ----------
 2004-10-XX
 
+	Jacobo221:
+		* Added the ability to resume/pause all downloads at the same time through amulecmd (very handy when all downloads have been paused due to lack of space)
+		* Fixed two bugs on amulecmd by which using 'pause' or 'resume' without arguments would pause/resume the oldest download.
+		* Several command simplifications on amulecmd to make it easier to use (while maintaining backwards compatibility).
+
 	KingFish:
 		* Fixed broken compilation in SysTray.cpp with gcc 3.3.4.
 
